--- a/data-array/src/index.html
+++ b/data-array/src/index.html
@@ -6,8 +6,15 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script type=text/javascript src="{{url_for('static', filename='js/script.js') }}"></script>
+  <style>
+    .sfondo{
+      background-color: #84dcf0;
+    }
+  </style>
 </head>
-<body>
+<body class="sfondo">
   <app-root></app-root>
 </body>
 </html>
